--- a/input.css
+++ b/input.css
@@ -11,7 +11,7 @@ a{
 }
 
 .topbar{
-    background: #212529;
+    background: #0f2027;
     color: white;
 }
 .topbar-logo{
@@ -77,21 +77,15 @@ a{
     width: 50%;
     text-decoration: none;
     padding: 0.6em 0;
-    transition: color .3s;
-    border: solid 1px transparent;
+    color: #0f2027;
+    border-radius: 4px;
+    margin-top: 2px;
 }
-
-.sidebar a:hover,
-.sidebar a:active{
-    color: black;
-    border: solid 4px whitesmoke;
-    border-radius: 3px;
-    background: #FFF;
-    font-weight: bold;
-}
-
 .sidebar a:hover{
-    text-decoration: underline;
+    background: #0f2027;
+    color: #FFF;
+    transition: .6s;
+
 }
 
 .sidebar a::before{
@@ -131,5 +125,71 @@ a{
     
 }
 
+.pad{
+    margin-right: 15px;
+}
+.kaj{
+    background: #0f2027;
+    font-size: 10px;
+}
+.acti{
+   background: #0f2027; 
+   color : white;
+}
+.footer-basic {
+    padding:40px 0;
+    background-color:#ffffff;
+    color:#4b4c4d;
+  }
+  
+  .footer-basic ul {
+    padding:0;
+    list-style:none;
+    text-align:center;
+    font-size:18px;
+    line-height:1.6;
+    margin-bottom:0;
+    margin-left: 24px;
+  }
+  
+  .footer-basic li {
+    padding:0 10px;
+  }
+  
+  .footer-basic ul a {
+    color:inherit;
+    text-decoration:none;
+    opacity:0.8;
+  }
+  
+  .footer-basic ul a:hover {
+    opacity:1;
+  }
+  
+  .footer-basic .social {
+    text-align:center;
+    padding-bottom:25px;
+  }
+  
+  .footer-basic .social > a {
+    font-size:24px;
+    line-height:40px;
+    display:inline-block;
+    text-align:center;
+    margin:0 8px;
+    opacity:0.75;
+  }
+  
+  .footer-basic .social > a:hover {
+    opacity:0.9;
+  }
+  
+  .footer-basic .copyright {
+    margin-top:15px;
+    text-align:center;
+    font-size:13px;
+    color:#aaa;
+    margin-bottom:0;
+  }
     
 
